# InboxSignal

./: .dockerignore  .env.example  .gitignore  README.md  dev_notes.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
apps/accounts/: adapters.py  admin.py  models.py  views.py
apps/ai/: admin.py  models.py
apps/alerts/: admin.py  models.py  tasks.py
apps/core/: context_processors.py  forms.py  views.py
apps/integrations/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
apps/monitoring/: admin.py  api.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
docker/web/: Dockerfile  entrypoint.sh
docs/: technical-readme.md
static/css/: auth.css  base.css  components.css  controls.css  core.css  events.css  forms.css  landing.css  landing_carousel.css  layout.css  modals.css  navigation.css  profile_cards.css  responsive.css  tokens.css
static/js/: account_settings_modal.js  auth_validation.js  profile_constructor.js
templates/: about.html  base.html  contact.html  home.html
templates/account/: email_confirm.html  login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
templates/includes/: _account_settings_modal.html  _event_card.html  _landing_preview_carousel.html  _monitoring_profile_form_sections.html  _navbar.html  _profile_counters_filters.html  (+1 more)
tests/: conftest.py
(+80 files in other folders)
